--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "python.pythonPath": "/home/mojtaba/.local/share/virtualenvs/lynda-30av93y9/bin/python"
+  "python.pythonPath": "/home/mojtaba/.local/share/virtualenvs/lynda-30av93y9/bin/python",
+  "python.formatting.provider": "black"
 }
